erDiagram
    users {
        UUID id PK
        VARCHAR(50) username UK
        VARCHAR(255) email UK
        VARCHAR(255) password_hash
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
        BOOLEAN is_email_verified
    }
    accounts {
        UUID id PK
        UUID user_id FK
        VARCHAR(20) account_type
        VARCHAR(30) account_number UK
        VARCHAR(100) account_name
        NUMERIC balance
        NUMERIC interest_rate
        INT fixed_term_months
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }
    transactions {
        UUID id PK
        UUID account_id FK
        VARCHAR(20) transaction_type
        NUMERIC amount
        VARCHAR(20) status
        NUMERIC balance_after
        UUID related_account_id FK
        TIMESTAMPTZ created_at
    }
    profiles {
        UUID id PK
        UUID user_id FK
        VARCHAR(100) display_name
        TEXT avatar_url
        VARCHAR(15) phone_number
        VARCHAR(20) national_id
        INT birth_year
        VARCHAR(10) gender
        VARCHAR(20) team
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }
    bank_links {
        UUID id PK
        UUID user_id FK
        VARCHAR(10) bank_code
        VARCHAR(20) account_type
        VARCHAR(255) access_token
        VARCHAR(255) refresh_token
        INT expires_in
        TIMESTAMPTZ created_at
    }
    interest_history {
        UUID id PK
        UUID account_id FK
        DATE date
        NUMERIC interest_amount
        TIMESTAMPTZ created_at
    }
    users ||--o{ accounts : "has"
    users ||--|| profiles : "has"
    users ||--o{ bank_links : "has"
    accounts ||--o{ transactions : "belongs to"
    accounts ||--o{ interest_history : "has"
    transactions }o--|| accounts : "related to"
